# gurgle

./: .gitignore  CMakeLists.txt  README.md  build.bat  imgui.ini
gurgle-game/: CMakeLists.txt  game-main.cpp
gurgle-lib/: CMakeLists.txt  game.cpp  index-buffer.cpp  index-buffer.hpp  lib-hello.cpp  lib-main.cpp  lib-main.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex-array.cpp  vertex-array.hpp  vertex-buffer.cpp  vertex-buffer.hpp  vertex-layout.cpp  vertex-layout.hpp
gurgle-lib/tests/: test-clear-color.cpp  test-clear-color.hpp  test-cube.cpp  test-cube.hpp  test-menu.cpp  test-menu.hpp  test-original.cpp  test-original.hpp  test-texture-2d.cpp  test-texture-2d.hpp  test.cpp  test.hpp
gurgle-test/: CMakeLists.txt
imgui/: CMakeLists.txt  imgui_impl_glfw_gl3.cpp  main.cpp
res/shaders/: basic.glsl  cube.glsl  original.glsl
